# trading-lab

./: .editorconfig  .gitattributes  .gitignore  .mlflow_tmp_consumer_exc.txt  README.md  README_STRATEGY_BASE.md  analyze_profile.py  compute_correlation.py  explorer_profile.out  filter_data.py  leaderboard.md  leaderboard_candidates.csv  master_list.json  phase10_intelligence_loop.md.txt  pyproject.toml  sitecustomize.py  test_openai.py
adapters/: data_adapters.py
common/: __init__.py  error_handling.py
companion/: __init__.py  ai_core.py  classifier.py  common.py  error_handling.py  error_handling.py.bak  impact.py  logging_config.py  loop.py  master_list.json  mlflow_client.py  patch_registry.py  planner.py  prompt_context.py  reporters.py  runners.py
configs/: companion.json  conda-env.lock.yml  conda-env.sha256.txt  data_registry.yaml  explorer.backup.json  explorer.json  global.sha256.txt  global.yaml  ml_labels.json  orchestrator.json  pip-freeze.sha256.txt  pip-freeze.txt  repro.sha256.txt  repro.yaml  tuning.json  tuning_policy.json
logs/: ohlcv_audit_20251002_153656.csv  ohlcv_audit_20251002_154025.csv  ohlcv_clean_report.csv  prepare_report.csv
metrics/: __init__.py  metrics_pack.py
ml/: __init__.py  cv_native.py
orchestrator/: execute.py  kickoff_once.py  loop.py  mlflow_bootstrap.py  mlflow_utils.py  orchestrate.py  parallel_cluster.py  tune.py
scripts/: __init__.py  _tmp_check_feature_labels.py  ai_helpers.ps1  ai_helpers.psm1  audit_all_ohlcv.py  audit_data.ps1  check_splits.py  ci_make_overlap_fixtures.py  cv_generate_mlfl.ps1  fix_ohlcv.py  (+24 more)
(+3567 files in other folders)
